<resources>
    <string name="app_name">BetweenOpposites</string>
    <string name="tittle_game">Between Opposites</string>
    <string name="un_jugador">1 Jugador</string>
    <string name="dos_jugadores">2 Jugadores</string>
    <string name="txt_titleRanking">RANKING</string>
    <string name="txt_puntuacion_1">0</string>
    <string name="palabraPuntos">puntos</string>
    <string name="nombreJUgador1">JUGADOR</string>
    <string name="dosJ_txt_btnCrearPartida">Crear</string>
    <string name="dosJ_txt_btnUnirsePartida">Unirse</string>
    <string name="ID_dosJ">Identificador :</string>
    <string name="damos_ID">************</string>
    <string name="intro_ID_dosJ">Introduce ID :</string>
    <string name="autofill_ID">Introduce la ID de la partida</string>
    <string name="informacion_conexion_2jug">Aqui damos información sobre el estado de la partida, conexión, esperando
        al segundo jugador, etc.
    </string>
    <string name="txt_btn_cancelar_dosJ">Cancelar</string>
    <string name="titleTxt_dosJ">Partida Multijugador</string>
    <string name="ejemplo_ID_partida2J">ex:53F10AAB98</string>
    <string name="top10">Top 10</string>
    <string name="title_activity_un_jugador">UnJugador</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="mor">Morir</string>
    <string name="ganar">Ganar</string>
    <string name="pausa">Pausa</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="partida_pausada">Partida Pausada</string>
    <string name="partida_pausada_aux">PARTIDA PAUSADA</string>
    <string name="exit">EXIT</string>
    <string name="renaudar">RENAUDAR</string>
    <string name="fin_juego">Fin del juego</string>
    <string name="Puntos">Puntos</string>
    <string name="todo">TODO</string>
    <string name="descripcio">Bienvenido a BetweenOpposites,\n
        \nTu misión consistirá en alcanzar la máxima puntuación posible. Para eso podrás optar por el bando de la oscuridad
        o el bando de la luz. Según tu elección deberás coger orbes de tu mismo bando(+10) mientras esquivas los orbes enemigos(-10).\n
        En el caso que el bando contrario té quite todos los puntos, cambiarás de bando.</string>
    <string name="Cambio_bando">Permite cambiar de bando en cualquier momento</string>
    <string name="Invisibilidad">Té hace invisible a todo el mundo</string>
    <string name="Augmento_velocidad">Aumenta tu velocidad</string>
    <string name="Sumador">Suma puntos extra</string>
    <string name="Multiplicador">Multiplicador de puntos</string>
    <string name="importante">IMPORTANTE: Deberás ir contando tu puntuación</string>
    <string name="Aceptar">Aceptar</string>

    <string name="informacio">Información</string>
    <string name="UsuarioLetra">Usuario: </string>
    <string name="correo">E-mail:</string>
    <string name="musica">MÚSICA</string>
    <string name="efectos">EFECTOS</string>
    <string name="vibracion">VIBRACIÓN</string>
</resources>
