<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo_tutorial"
        tools:context=".View.Tutorial">

    <Button
            android:text="@string/Aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btn_accept" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="636dp"
            app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:text="@string/descripcio"
            android:textColor="@color/common_google_signin_btn_text_dark"
            android:layout_width="358dp"
            android:layout_height="168dp"
            android:id="@+id/txt_descripcio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="107dp" android:textSize="14sp"/>
    <ImageView
            android:layout_width="56dp"
            android:layout_height="48dp" app:srcCompat="@drawable/objeto_cambiobando"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="56dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="312dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_descripcio"/>
    <TextView
            android:text="@string/Cambio_bando"
            android:textColor="@color/common_google_signin_btn_text_dark"
            android:layout_width="238dp"
            android:layout_height="47dp"
            android:id="@+id/txt_cambioBando"
            android:layout_marginStart="28dp"
            app:layout_constraintStart_toEndOf="@+id/imageView" android:textSize="14sp"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/txt_descripcio"/>
    <ImageView
            android:layout_width="56dp"
            android:layout_height="48dp" app:srcCompat="@drawable/objeto_invisibilidad"
            android:id="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="56dp" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <TextView
            android:text="@string/Invisibilidad"
            android:textColor="@color/common_google_signin_btn_text_dark"
            android:layout_width="244dp"
            android:layout_height="36dp"
            android:id="@+id/txt_invisible" android:textSize="14sp"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/txt_cambioBando"
            app:layout_constraintStart_toEndOf="@+id/imageView2" android:layout_marginStart="28dp"/>
    <ImageView
            android:layout_width="56dp"
            android:layout_height="48dp" app:srcCompat="@drawable/objeto_velocidad"
            android:id="@+id/imageView3" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="56dp"/>
    <TextView
            android:text="@string/Augmento_velocidad"
            android:textColor="@color/common_google_signin_btn_text_dark"
            android:layout_width="236dp"
            android:layout_height="41dp"
            android:id="@+id/txt_velocidad" android:textSize="14sp" android:layout_marginStart="28dp"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            android:layout_marginTop="22dp" app:layout_constraintTop_toBottomOf="@+id/txt_invisible"/>
    <ImageView
            android:layout_width="56dp"
            android:layout_height="48dp" app:srcCompat="@drawable/sumador"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="56dp"
            android:id="@+id/imageView4" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"/>
    <TextView
            android:text="@string/Sumador"
            android:textColor="@color/common_google_signin_btn_text_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_sumador" android:layout_marginTop="23dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_velocidad" android:layout_marginStart="28dp"
            app:layout_constraintStart_toEndOf="@+id/imageView4" android:textSize="14sp"/>
    <ImageView
            android:layout_width="56dp"
            android:layout_height="48dp" app:srcCompat="@drawable/multiplicador"
            android:id="@+id/imageView5"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="56dp"
            android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/imageView4"/>
    <TextView
            android:text="@string/Multiplicador"
            android:textColor="@color/common_google_signin_btn_text_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_multi" android:layout_marginStart="28dp"
            app:layout_constraintStart_toEndOf="@+id/imageView5" android:layout_marginTop="45dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_sumador" android:textSize="14sp"/>
    <TextView
            android:text="@string/importante"
            android:textColor="@color/common_google_signin_btn_text_dark"
            android:layout_width="349dp"
            android:layout_height="28dp"
            android:id="@+id/txt_importante"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="44dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="18dp"/>
</android.support.constraint.ConstraintLayout>