<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PantallaDosJugadores"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center|top"
        android:padding="20dp"
>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/dosJ_btnCrearPartida"
            android:text="@string/dosJ_txt_btnCrearPartida"
            android:gravity="center"
    />

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/dosJ_layoutCrearPartida"
            android:padding="10dp"
            android:theme="@android:style/Animation.Dialog"
            android:layout_gravity="center"
            android:gravity="left"
            android:orientation="horizontal"
            android:backgroundTint="@android:color/darker_gray"
    >
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/id_tag_dosJ"
                  android:text="@string/ID_dosJ"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="80dp" android:layout_marginTop="10dp"
                  app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="10dp"
                  app:layout_constraintBottom_toBottomOf="parent"
        />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/dar_id_dosJ"
                  android:text="@string/dar_id"
                  app:layout_constraintBottom_toBottomOf="parent"
                  android:layout_marginBottom="14dp" app:layout_constraintTop_toTopOf="parent"
                  android:layout_marginTop="16dp" app:layout_constraintStart_toEndOf="@+id/id_tag_dosJ"
                  android:layout_marginStart="12dp" app:layout_constraintVertical_bias="0.45"/>
        
    </android.support.constraint.ConstraintLayout>

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/dosJ_btnUnirsePartida"
            android:text="@string/dosJ_txt_btnUnirsePartida"
            android:gravity="center"
    />

</LinearLayout>